# old-obs-studio

./: .gitignore
.github/workflows/: main.yml
CI/: full-build-macos.sh
libobs/: obs-display.c  obs-encoder.c  obs-output.c  obs.c  obs.h
libobs-opengl/: gl-cocoa.m
libobs/graphics/: graphics-imports.c  graphics-internal.h  graphics.c  graphics.h
libobs/media-io/: video-io.c  video-io.h
libobs/util/: threading-posix.h  threading-windows.h
plugins/: CMakeLists.txt
plugins/mac-capture/: mac-window-capture.m
plugins/mac-virtualcam/src/common/: MachProtocol.h
plugins/mac-virtualcam/src/dal-plugin/: CMSampleBufferUtils.h  CMSampleBufferUtils.mm  CMakeLists.txt  Info.plist  LONGDALDevice.h  LONGDALDevice.mm  LONGDALMachClient.h  LONGDALMachClient.mm  LONGDALObjectStore.h  LONGDALObjectStore.mm  LONGDALPlugIn.h  LONGDALPlugIn.mm  LONGDALPlugInInterface.h  LONGDALPlugInInterface.mm  LONGDALPlugInMain.mm  LONGDALStream.h  LONGDALStream.mm
plugins/mac-virtualcam/src/obs-plugin/: OBSDALMachServer.h  OBSDALMachServer.mm  plugin-main.mm
plugins/mac-virtualcam/src/obs-plugin/data/: install-plugin.sh
plugins/obs-filters/: CMakeLists.txt  background-mask.c  circle-avatar-filter.c
plugins/obs-filters/background-matting/win/include/: c_api.h
plugins/obs-filters/background-matting/win/plugins/: tensorflowlite_c.lib
plugins/obs-filters/data/: background_mask.effect  circle_avatar.effect
plugins/obs-outputs/librtmp/: rtmp.c
plugins/text-freetype2/: find-font-cocoa.m
slobs_CI/: full-build-without-ipc.sh  install-script-win.cmd
